--- a/base/package.json
+++ b/base/package.json
@@ -31,7 +31,7 @@
 		"webpack-cli": "^4.2.0",
 		"webpack-dev-middleware": "^4.0.2",
 		"webpack-dev-server": "^3.11.0",
-		"webpack-manifest-plugin": "^2.2.0",
+		"webpack-manifest-plugin": "ssh://git@github.com:shellscape/webpack-manifest-plugin.git",
 		"webpack-nano": "^1.1.0",
 		"xml-loader": "^1.2.1",
 		"yamljs": "^0.3.0"
