--- a/css/package.json
+++ b/css/package.json
@@ -4,11 +4,17 @@
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
+    "postcss": "^8.1.7",
     "postcss-loader": "^4.0.4",
+    "postcss-modules": "^3.2.2",
     "postcss-preset-env": "^6.7.0",
+    "postcss-sass": "^0.4.4",
+    "posthtml": "^0.13.4",
+    "posthtml-css-modules": "^0.1.3",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.7.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
