--- a/开发生产环境配置不同/package.json
+++ b/开发生产环境配置不同/package.json
@@ -20,8 +20,8 @@
   "homepage": "https://github.com/lornally/tspshow#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.js",
-    "serve": "webpack serve --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --config webpack.dev.js",
     "watch": "webpack --watch --config webpack.dev.js"
   },
   "devDependencies": {
