--- a/reactNamap/package.json
+++ b/reactNamap/package.json
@@ -10,10 +10,21 @@
     "coffeescript": "^2.5.1",
     "cson": "^7.20.0",
     "cson-loader": "^0.1.0",
+    "css-loader": "^5.0.1",
     "eslint-plugin-coffee": "^0.1.13",
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.1",
+    "postcss": "^8.1.9",
+    "postcss-loader": "^4.1.0",
+    "postcss-modules": "^3.2.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-sass": "^0.4.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "stylelint": "^13.8.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.2",
@@ -26,8 +37,7 @@
     "test": "node  ./dist/api/main.js",
     "build": "webpack ",
     "dev": "webpack serve ",
-		"watch": "webpack --watch ",
-		"debug": "暂时麽咏nade ./dist"
-
+    "watch": "webpack --watch ",
+    "debug": "暂时麽咏nade ./dist"
   }
 }
