--- a/lib库项目/package.json
+++ b/lib库项目/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.2",
     "webpack-dev-server": "^3.11.0",
+    "webpack-glob": "^2.0.2",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^5.4.0",
     "webpack-nano": "^1.1.0",
@@ -29,9 +30,12 @@
     "dev": "webpack serve ",
     "watch": "webpack --watch ",
     "debug": "暂时麽咏nade ./dist"
-  },
+	},
+	"name":"mlib",
+	"license": "copyright" ,
   "dependencies": {
     "lodash": "^4.17.20"
-	},
-	"module": "src/index.cs"
+	}
+	
+  
 }
