--- a/lib库项目/babel.config.json
+++ b/lib库项目/babel.config.json
@@ -13,5 +13,5 @@
 			"modules": false
 		}]
 	],
-	"plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-object-rest-spread"]
+	//"plugins": ["@babel/plugin-transform-runtime", "@babel/plugin-proposal-object-rest-spread"]
 }
