--- a/lib库项目/package.json
+++ b/lib库项目/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "show",
+  "version": "1.0.0",
+  "description": "数据的可视化展示",
+  "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lornally/tspshow.git"
+  },
+  "keywords": [
+    "show",
+    "map",
+    "datashow"
+  ],
+  "author": "michael",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lornally/tspshow/issues"
+  },
+  "homepage": "https://github.com/lornally/tspshow#readme",
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
@@ -10,10 +29,14 @@
     "coffeescript": "^2.5.1",
     "cson": "^7.20.0",
     "cson-loader": "^0.1.0",
+    "css-loader": "^5.0.1",
     "eslint-plugin-coffee": "^0.1.13",
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.2",
+    "postcss-loader": "^4.1.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.2",
@@ -25,17 +48,16 @@
     "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
-    "test": "node  ./dist/api/main.js",
-    "build": "webpack ",
-    "dev": "webpack serve ",
-    "watch": "webpack --watch ",
-    "debug": "暂时麽咏nade ./dist"
-	},
-	"name":"mlib",
-	"license": "copyright" ,
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "build": "webpack --config webpack.dev.coffee",
+    "dev": "webpack serve --config webpack.dev.coffee",
+    "prod": "webpack serve --config webpack.prod.coffee",
+    "watch": "webpack --watch --config webpack.dev.coffee"
+  },
   "dependencies": {
-    "lodash": "^4.17.20"
-	}
-	
-  
+    "lodash": "^4.17.20",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  }
 }
