--- a/coffee/package.json
+++ b/coffee/package.json
@@ -1,4 +1,11 @@
 {
+	"name": "webpack-demo",
+	"version": "1.0.0",
+	"description": "",
+	"private": true,
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
@@ -10,24 +17,29 @@
     "coffeescript": "^2.5.1",
     "cson": "^7.20.0",
     "cson-loader": "^0.1.0",
+    "css-loader": "^5.0.1",
     "eslint-plugin-coffee": "^0.1.13",
     "eslint-plugin-react": "^7.21.5",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.3.1",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss-loader": "^4.1.0",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-middleware": "^4.0.2",
     "webpack-dev-server": "^3.11.0",
+    "webpack-glob": "^2.0.2",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^5.4.0",
-    "webpack-nano": "^1.1.0"
+    "webpack-nano": "^1.1.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "scripts": {
-    "test": "node  ./dist/api/main.js",
+		"test": "node  ./dist/api/main.js",
+		"debug": "暂时麽咏nade ./dist",
     "build": "webpack ",
     "dev": "webpack serve ",
-		"watch": "webpack --watch ",
-		"debug": "暂时麽咏nade ./dist"
-
+    "watch": "webpack --watch "
   }
 }
