--- a/node和web共存/package.json
+++ b/node和web共存/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-		"dev": "webpack serve",
-		"watch":"webpack --watch"
+    "dev": "webpack serve",
+    "watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +17,17 @@
     "@webpack-cli/init": "^1.0.3",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "coffee-loader": "^2.0.0",
+    "coffeescript": "^2.5.1",
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.1",
     "mini-css-extract-plugin": "^1.3.0",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack": "^5.4.0",
-		"webpack-cli": "^4.2.0",
-		"webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
