--- a/多个htmlN命令行Nc24nNi18n/package.json
+++ b/多个htmlN命令行Nc24nNi18n/package.json
@@ -26,6 +26,7 @@
 		"dev": "webpack serve --config webpack.dev.coffee",
 		"html": "webpack serve --config webpack.html.coffee",
 		"p": "webpack serve --config webpack.p.coffee",
+		"pm": "webpack --config webpack.p.coffee",
     "prod": "webpack serve --config webpack.prod.coffee",
 		"make": "webpack --config webpack.dev.coffee && chmod u+x ./exroot/cmd/bin.js",
 		"cmd": "webpack --config webpack.cmd.coffee && chmod u+x ./exroot/cmd/bin.js",
