--- a/多个htmlN命令行Nc24nNi18n/package.json
+++ b/多个htmlN命令行Nc24nNi18n/package.json
@@ -25,7 +25,7 @@
 		"build": "webpack --config webpack.prod.coffee",
 		"dev": "webpack serve --config webpack.dev.coffee",
 		"web": "webpack serve --config webpack.p.coffee",
-		"onlyweb": "webpack serve --config webpack.onlyweb.coffee",
+		"onlyweb": "webpack --config webpack.onlyweb.coffee",
 		"c": "webpack --config webpack.p.coffee",
     "prod": "webpack serve --config webpack.prod.coffee",
 		"make": "webpack --config webpack.dev.coffee && chmod u+x ./exroot/cmd/bin.js",
